# Mapa_do_Bosque_2

./: .gitignore  CLAUDE.md  DEPLOY_RENDER.md  DEPLOY_UNIFICADO.md  INTEGRACAO-AUTH.md  docker-compose.yml  pyproject.toml  render.yaml  test-deploy-local.sh
auth/: urls.py  views.py
backend/: .dockerignore  .gitignore  DOCKER-README.md  Dockerfile  README.md  docker-compose.yml  manage.py  ngrok.yml  pyproject.toml
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_passwordresettoken.py  0003_alter_user_cargo.py  0004_alter_user_setor.py
backend/authentication/: urls.py  views.py
backend/bosque/: urls.py  views.py
backend/mapaconfig/: settings.py  urls.py  views.py
backend/scripts/: sync_td_to_supabase.sh
backend/staticfiles/: index-Bb3YJKa6.css  index-p_bZcyqJ.js
backend/templates/: Modificacoes.md
backend/templates/auth/: login.html  register.html
backend/templates/instagram/: instagram.html
backend/templates/operacoes/: main.html
backend/wbr/: README.md  __init__.py  admin.py  apps.py  models.py  urls.py  views.py
backend/wbr/cache/: __init__.py  interface.py  memory_cache.py  null_cache.py  redis_cache.py
backend/wbr/database/: __init__.py  interface.py  postgres_executor.py
backend/wbr/exceptions/: __init__.py  wbr_exceptions.py
backend/wbr/factories/: __init__.py  component_factory.py
backend/wbr/services/: __init__.py  config_loader.py  data_processor.py  instagram_query_builder.py  logger.py  query_builder.py  rgm_cto_percentual_query_builder.py  wbr_service.py
(+102 files in other folders)
