[project]
name = "mapa-do-bosque-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "dotenv>=0.9.9",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
]
