[project]
name = "mapa-do-bosque-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-restframework>=0.0.1",
    "djangorestframework>=3.16.1",
    "python-dotenv>=1.0.0",
    "markdown>=3.9",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "redis>=5.0.0",
    "gunicorn>=21.2.0",
    "whitenoise>=6.6.0",
]
